# greeting_lib

./: CMakeLists.txt  README.md  main.cpp
examples/: CMakeLists.txt  main.cpp
include/greeter/: greeter.h
src/: greeter.cpp
